# vehicle_secure_protocol

./: CMakeLists.txt
include/crypto/: sm2_wrapper.h  sm3_wrapper.h  sm4_wrapper.h
include/network/: secure_socket.h
include/utils/: logger.h
src/crypto/: sm2_wrapper.cpp  sm3_wrapper.cpp  sm4_wrapper.cpp
src/network/: secure_socket.cpp
src/rsu/: rsu_main.cpp
src/utils/: logger.cpp
src/vehicle/: vehicle_main.cpp
